tests/golden/type_errors/typeof_shadowed_call_non_function.cd
let typeOf = 123;
typeOf(nil);
